# llm-zoomcamp-2026

./: .gitignore  README.md  pyproject.toml  requirements.txt
01-agentic-rag/: homework.ipynb  homework.md
02-vector-search/: embedder.py  homework.ipynb  homework.md
