[project]
name = "llm-zoomcamp-2026"
version = "0.1.0"
description = "A project scaffold for the 2026 LLM Zoomcamp."
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

dependencies = []

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
