[project]
name = "llm-zoomcamp-2026"
version = "0.1.0"
description = "LLM Zoomcamp 2026 assignments and notes repository."
authors = [
    {name = "Sergio Veliz"},
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

dependencies = []

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
